<resources>
    <string name="app_name">Bikefit</string>
    <string name="splash_screen_name">Bikefit</string>
    <string name="toolbar_content_description_back">Back</string>
    <string name="welcome_activity_title">Welcome</string>
    <string name="welcome_activity_welcome_message">85% of cyclists with bike shoes need adjustments where their shoe connects to the pedal. \n\nThis app will help you measure yourself for a set of cleat wedges. Well-fitted cleat wedges improve your performance and safety.</string>
    <string name="welcome_activity_more_button">Tell me more</string>
    <string name="welcome_activity_orientation_button">Watch the orientation video</string>
    <string name="welcome_activity_start_button">Let\'s get started</string>
    <string name="welcome_activity_bikefit_logo_content_description">Bike Fit logo</string>
    <string name="activity_wedging_benefits_top_text">Placeholder text, please replace with real copy. Curabitur lobortis id lorem id bibendum. Ut id consectetur magna. \n\nPlaceholder text, please replace with real copy. Curabitur lobortis id lorem id bibendum. Ut id consectetur magna.</string>
    <string name="activity_wedging_benefits_bottom_text">Placeholder text, please replace with real copy. A misalignment may not always be visible while the cyclist is pedaling but that does not mean a misalighment does not exist. \n\nPlaceholder text, please replace with real copy. Curabitur lobortis id lorem id bibendum. Ut id consectetur magna.</string>
    <string name="footSide_left">Left</string>
    <string name="footSide_right">Right</string>
    <string name="orientation_video_default_url">https://www.youtube.com/embed/C0DPdy98e4c</string>
    <string name="orientation_video_fragment_title_label">Orientation Video</string>
    <string name="orientation_video_no_connection"><![CDATA[<html>Your Network Connection is NOT Available.<br/><br/>Please check your network settings and try again.</html>]]></string>
    <string name="orientation_video_fragment_done_button_label">Done</string>
    <string name="main_menu_fragment_title">Overview</string>
    <string name="main_menu_fragment_instruction_text">Select a step to begin.</string>
    <string name="main_menu_fragment_orientation_video">Orientation Video</string>
    <string name="main_menu_fragment_what_you_need">What you\'ll need</string>
    <string name="main_menu_fragment_get_in_position">Get in Position</string>
    <string name="main_menu_fragment_measure_your_feet_button_label">Measure Your Feet</string>
    <string name="main_menu_fragment_get_results">Results</string>
    <string name="main_menu_fragment_start_button_text">Got it</string>
    <string name="main_menu_fragment_bikefit_logo_content_description">Bike Fit logo</string>
    <string name="camera_fragment_instruction_text">Center the red line with the back of the heel and tap the screen to take a screenshot</string>
    <string name="camera_fragment_request_permission">This section requires the camera permission.</string>
    <string name="camera_fragment_camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="measure_feet_instructions_fragment_title_text">%1$s Foot</string>
    <string name="measure_feet_instructions_fragment_header_text">Instructions</string>
    <string name="measure_feet_instructions_fragment_description_text">Start by pointing the camera straight down, center the red line over the heel and ankle.\n\nThen tap the camera button to take a snapshot.</string>
    <string name="measure_feet_instructions_fragment_snapshot_button_text">Take a Snapshot</string>
    <string name="measure_feet_instructions_fragment_more_button_text">Tell me more</string>
    <string name="measure_feet_instructions_fragment_permission_denied_text">Pictures will be saved in a cache directory instead of an external storage directory since permission was denied.</string>
    <string name="measure_feet_instructions_fragment_foot_icon_content_description">Drawing of heal of foot centered on screen</string>
    <string name="measurement_fragment_title_text">%1$s Foot</string>
    <string name="measurement_fragment_angle_display_format">%.2f°</string>
    <string name="measurement_fragment_undo_button_text">UNDO</string>
    <string name="measurement_fragment_save_button_text">SAVE</string>
    <string name="measurement_fragment_wedge_icon_content_description">Visual representation of wedge count calculated from angle</string>
    <string name="measurement_dialog_fragment_screen1_button_text">Next (1 of 2)</string>
    <string name="measurement_dialog_fragment_screen1_description_text">Now adjust the horizontal red line so that it follows the bottom of your friend\'s heel. \n\nSwiping up and down on the left side of the screen moves the line, and swiping on the right side rotates it.</string>
    <string name="measurement_dialog_fragment_screen2_button_text">Done</string>
    <string name="measurement_dialog_fragment_screen2_description_text">The number of wedges below the crosshairs tracks how many wedges we predict you\'ll need. The measured angle is at the top of the screen.</string>
    <string name="measurement_summary_fragment_title_label">Measurement Complete</string>
    <string name="measurement_summary_fragment_title_onefoot_label">%1$s Foot Complete</string>
    <string name="measurement_summary_fragment_title_nofeet_label">Nothing Measured</string>
    <string name="measurement_summary_fragment_ok_button_label">OK, let\'s do it</string>
    <string name="measurement_summary_fragment_not_measured_label">\?</string>
    <string name="measurement_summary_fragment_unknown_label">Unknown</string>
    <string name="measurement_summary_fragment_angle_label">%1$.0f° Tilt</string>
    <string name="measurement_summary_fragment_nofeet_measured_instruction_label">No feet have been measured.</string>
    <string name="measurement_summary_fragment_incomplete_instruction_text">That was the %1$s foot, now let\'s do the %2$s. It\'s going to be exactly the same process just with the other foot.</string>
    <string name="measurement_summary_fragment_left_header_label">Left Foot</string>
    <string name="measurement_summary_fragment_right_header_label">Right Foot</string>
    <string name="measurement_summary_fragment_complete_instruction_text">According to these measurements, you\'ll need a total of %1$d wedges. \n\nA properly fitted bike reduces the risk of injury, decreases fatigue, and provides you with more power on each cycle.</string>
    <string name="measurement_summary_fragment_full_fitting_button_label">Do a full fitting myself</string>
    <string name="measurement_summary_fragment_professional_button_label">Get professionally fitted</string>
    <string name="measurement_summary_fragment_purchase_button_label">Purchase Wedges</string>
    <string name="measurement_summary_fragment_wedge_count_graphic_content_description">Wedge count graphic</string>
    <string name="measurement_summary_fragment_right_not_measured_content_description">Right foot is not measured yet.</string>
    <string name="measurement_summary_fragment_left_not_measured_content_description">Left foot not measured yet</string>
    <string name="measurement_summary_fragment_professional_fitting_url">http://blog.bikefit.com/find-a-bikefit-pro?AWC=true</string>
    <string name="what_you_need_fragment_title_label">What You\'ll Need</string>
    <string name="what_you_need_fragment_ok_button_label">OK, we\'re ready to start</string>
    <string name="what_you_need_fragment_couch_text">A sofa or chair to dangle \nyour feet over</string>
    <string name="what_you_need_fragment_lightbulb_text">Good lighting</string>
    <string name="what_you_need_fragment_highfive_text">A friend to help you</string>
    <string name="what_you_need_fragment_couch_icon_content_description">Drawing of couch or sofa</string>
    <string name="what_you_need_fragment_light_bulb_icon_content_description">Drawing of a light bulb</string>
    <string name="what_you_need_fragment_highfive_icon_content_description">Drawing of two hands giving a high-five</string>
    <string name="get_in_position_fragment_title_label">Get in Position</string>
    <string name="get_in_position_fragment_measure_button_label">Measure my feet</string>
    <string name="get_in_position_fragment_instruction_text_label"><![CDATA[<html>tests<br/><ol><li>Remove your shoes</li><li>Kneel backwards on a chair or couch, feet facing outward</li><li>Hand the phone to your friend</li></ol></html>]]></string>
    <string name="get_in_position_fragment_instruction_text_one_label">1. Remove your shoes</string>
    <string name="get_in_position_fragment_instruction_text_two_label">2. Kneel backwards on a chair or couch, feet facing outward</string>
    <string name="get_in_position_fragment_instruction_text_three_label">3. Hand the phone to your friend</string>
    <string name="get_in_position_fragment_illustration_icon_content_description">Drawing of person kneeling on chair with no shoes on to help take picture of feet.</string>
    <string name="cleat_selection_fragment_title_label">Select Your Cleat Type</string>
    <string name="cleat_selection_fragment_look_header_label">Look Cleat Wedges®</string>
    <string name="cleat_selection_fragment_look_description_label">For use with Look Keo, Look Delta, Shimano SL road, Campagnolo, Time road and similar 3-hole cleat systems.</string>
    <string name="cleat_selection_fragment_speedplay_header_label">Speedplay Cleat Wedges®</string>
    <string name="cleat_selection_fragment_speedplay_description_label">For use with Speedplay X-Series, Zero and Light Action cleat systems.</string>
    <string name="cleat_selection_fragment_spd_header_label">SPD Cleat Wedges®</string>
    <string name="cleat_selection_fragment_spd_description_label">For use with SPD-compatible cleats and most other side-by-side two hole cleat systems.</string>
    <string name="cleat_selection_fragment_dont_know_button_label">I don\'t know which wedges I need</string>
    <string name="cleat_selection_fragment_look_url">http://www.bikefit.com/p-7-8-pack-look-cleat-wedges.aspx?AWC=true</string>
    <string name="cleat_selection_fragment_speedplay_url">http://www.bikefit.com/p-9-8-pack-speedplay-cleat-wedges.aspx?AWC=true</string>
    <string name="cleat_selection_fragment_spd_url">http://www.bikefit.com/p-3-8-pack-spd-cleat-wedges.aspx?AWC=true</string>
    <string name="cleat_selection_help_fragment_get_fitted_button_label">Get professionally fitted</string>
    <string name="cleat_selection_help_fragment_instruction_label">Check the number and arrangement of pegs on your shoes, and compare them to the diagrams. \n\nMost cleat systems fall into one of the three types listed on this page. \n\nIf you still have questions, contact a professional bike fitter in your area.</string>
    <string name="measure_feet_instructions_help_fragment_title_text">%1$s Foot Camera Help</string>
    <string name="measure_feet_instructions_help_fragment_ready_button_label">I\'m Ready</string>
    <string name="measure_feet_instructions_help_fragment_no_measurement">No Measurement</string>
    <string name="measure_feet_instructions_help_fragment_footimage_content_description">Drawing of foot with heal centered on screen</string>
    <string name="measurement_feet_instructions_help_dialog_fragment_text">This is what it should look like when you have everything lined up correctly: the line is centered on the middle of the leg, and the bottom of the heel is clearly visible.</string>
    <string name="measurement_feet_instructions_help_dialog_fragment_instruction_text">Press the <i>I\'m Ready</i> button when you are ready to proceed.</string>
    <string name="measurement_feet_instructions_help_dialog_fragment_button_label">Dismiss</string>
</resources>