<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    android:padding="16dp"
    android:windowBackground="@android:color/transparent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@android:color/transparent"
        android:text="@string/measurement_feet_instructions_help_dialog_fragment_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:text="@string/measurement_feet_instructions_help_dialog_fragment_instruction_text" />


    <Button
        android:id="@+id/measurement_feet_instructions_help_dialog_fragment_button"
        style="@style/Button.Dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:focusable="true"
        android:text="@string/measurement_feet_instructions_help_dialog_fragment_button_label" />

</LinearLayout>