<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <!--        <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="none">-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="@dimen/app_margins"
            android:layout_marginRight="@dimen/app_margins"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/foot_icon" />

            <TextView
                android:id="@+id/measure_feet_instructions_fragment_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_weight="0"
                android:gravity="center_horizontal"
                android:text="@string/measure_feet_instructions_fragment_header_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/measure_feet_instructions_fragment_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/measure_feet_instructions_fragment_description_text" />

        </LinearLayout>
        <!--        </ScrollView>-->

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/TitleBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationContentDescription="@string/toolbar_content_description_back"
            app:navigationIcon="?homeAsUpIndicator"
            app:popupTheme="@style/TitleBar.PopupThemeOverlay"
            app:theme="@style/TitleBar.ThemeOverlay" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="@dimen/app_margins"
        android:layout_marginLeft="@dimen/app_margins"
        android:layout_marginRight="@dimen/app_margins"
        android:layout_weight="0"
        android:orientation="vertical">

        <!-- Client feature that is not ready yet -->
        <Button
            android:id="@+id/measure_feet_instructions_fragment_more_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:focusable="true"
            android:text="@string/measure_feet_instructions_fragment_more_button_text" />

        <Button
            android:id="@+id/measure_feet_instructions_fragment_snapshot_button"
            style="@style/Button.Focus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:focusable="true"
            android:text="@string/measure_feet_instructions_fragment_snapshot_button_text" />
    </LinearLayout>

</LinearLayout>