<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootFrame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:foreground="?selectableItemBackground">

    <FrameLayout
        android:id="@+id/camera_fragment_screen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/measure_feet_instructions_help_fragment_footimage_content_description"
            app:srcCompat="@drawable/foot_for_centering" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                style="@style/TitleBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:navigationIcon="?homeAsUpIndicator"
                app:popupTheme="@style/TitleBar.PopupThemeOverlay"
                app:theme="@style/TitleBar.ThemeOverlay"
                app:title="@string/measure_feet_instructions_help_fragment_title_text" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    app:srcCompat="@drawable/measurement_space" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|top"
                    android:background="@android:color/transparent"
                    android:gravity="center_horizontal"
                    android:text="@string/measure_feet_instructions_help_fragment_no_measurement" />
            </FrameLayout>

        </LinearLayout>

    </FrameLayout>

    <Button
        android:id="@+id/measure_feet_instructions_help_fragment_ready_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/app_margins"
        android:layout_marginLeft="@dimen/app_margins"
        android:layout_marginRight="@dimen/app_margins"
        android:focusable="true"
        android:text="@string/measure_feet_instructions_help_fragment_ready_button_label" />

</RelativeLayout>